# drp1-mito-fission-model

./: .gitignore  Makefile  flake.nix  pyproject.toml  readme.md
code/: GSA_4params.py  GSA_5params.py  GSA_dimensionless.py  TFR_k+_k-_M.py  TFR_k1_k-1_T_a.py  bifurcation_u.py  dimensionless_fission_system.py  dimlessTFR_alpha_beta_zeta.py  dimlessTFR_u.py  eigenvalues_and_SS_u.py  five_panel.py  plot_together.py  plots_2^11_800.py  plots_2^11_800_4&5params.py  system_stepfunct_volumeterm.py  util.py
data/: eigen_values.txt  input_800_2^11_4params.txt  input_800_2^11_5params.txt  input_800_2^11_dimless.txt  output_800_2^11_4params.txt  output_800_2^11_5params.txt  output_800_2^11_dimless.txt  result_800_2^11_4params.pickle  result_800_2^11_5params.pickle  result_800_2^11_dimless.pickle
nix/: salib.nix
